@@ -390,7 +390,7 @@ func testActionsitThresholdCDrLog(t *testing.T) {
 				utils.PDD:         time.Duration(0) * time.Second,
 				utils.AnswerTime:  time.Date(2013, 11, 7, 8, 42, 26, 0, time.UTC),
 				utils.Usage:       time.Duration(10) * time.Second,
-				utils.SUPPLIER:    "SUPPL1",
+				utils.ROUTE:       "SUPPL1",
 				utils.COST:        -1.0,
 			},
 		},
@@ -663,7 +663,7 @@ func testActionsitThresholdPostEvent(t *testing.T) {
 			utils.PDD:         time.Duration(0) * time.Second,
 			utils.AnswerTime:  time.Date(2013, 11, 7, 8, 42, 26, 0, time.UTC),
 			utils.Usage:       time.Duration(10) * time.Second,
-			utils.SUPPLIER:    "SUPPL1",
+			utils.ROUTE:       "SUPPL1",
 			utils.COST:        -1.0,
 		},
 	}
