@@ -83,6 +83,8 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [SessionS] Updated the ids handling in flags by adding *ids as a new flag
   * [SessionS] Added *derived_reply sub flag to ProcessEvent to specify if a subsystem needs to process the events from ChargerS
   * [Templates] Added new dataconverter: *string2hex
+  * [AttributeS] Updated AttributeProfile matching to match the second AttributeProfile with the same weight
+  * [AttributeS] Updated inline AttributeProfiles to unite all consecutive inline attributes in a single profile 
 
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
